--- a/src/views/orders/all.hbs
+++ b/src/views/orders/all.hbs
@@ -3,6 +3,10 @@
         <h3>No. orden: {{order_number}}</h3>
         <p>Producto: {{product_sku}}</p>
         <p>Asesor: {{asesor}}</p>
+        <p>Origen: {{origin}}</p>
+        <p>Usuario: {{username}}</p>
         <a href="/orders/delete/{{order_id}}">Delete</a>
+        <a href="/orders/client/{{order_id}}">Información Cliente</a>
+        <a href="">Personalización</a>
     </div>
 {{/each}}
